--- a/mod2-sol/css/styles.css
+++ b/mod2-sol/css/styles.css
@@ -1,15 +1,82 @@
+* {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+h1 {
+    text-align: center;
+    margin: 3% 0 3% 0;
+}
+
 .row {
-    width: 100%;
+  width: 100%;
+  padding: 0 2% 0 2%;
+}
+.title1, .title2, .title3  {
+  border-left: 2px solid black;
+  border-bottom: 2px solid black;
+  text-align: center;
+  font-weight: bold;
+  font-size: 1.2em;
+  width: 15%;
+  height: 20%;
+  padding: 0.5%;
+  position: relative;
+  float: right;
+  margin-bottom: 5%;
+}
+
+.title1 {
+    background-color: rgb(206, 145, 155);
+}
+
+.title2 {
+    background-color: rgb(255, 0, 0);
+    color: white;
+}
+
+.title3 {
+    background-color: rgb(189, 156, 94);
+}
+
+.column1, .column2, .column3 {
+   background-color: rgb(139, 138, 138); 
+   border: 3px solid rgb(0, 0, 0);
+}
+
+.description {
+    margin: 8% 5% 5% 5%;
+    font-size: 18px;
 }
 
 @media (min-width: 992px) {
-
+  .column1 {
+    width: 30%;
+    float: left;
+    margin: 0 2% 0 0;
+  }
+  .column2 {
+    width: 30%;
+    float: left;
+    margin: 0 2% 0 0;
+  }
+  .column3 {
+    width: 30%;
+    float: left;
+    margin: 0 2% 0 0;
+  }
 }
 
 @media (min-width: 768px) and (max-width: 991px) {
-
+}
+.column1 {
+    width: 50%;
+}
+.column2 {
+    width: 50%;
+}
+.column3 {
+    width: 100%;
 }
 
 @media (min-width: 767px) and (max-width: 767px) {
-
 }
