--- a/mod2-sol/css/styles.css
+++ b/mod2-sol/css/styles.css
@@ -1,82 +1,140 @@
+/* overall styling for all screen sizes */
 * {
   font-family: Arial, Helvetica, sans-serif;
 }
-
 h1 {
-    text-align: center;
-    margin: 3% 0 3% 0;
+  text-align: center;
+  margin: 3% 0 3% 0;
 }
-
 .row {
   width: 100%;
   padding: 0 2% 0 2%;
 }
-.title1, .title2, .title3  {
+.title1,
+.title2,
+.title3 {
   border-left: 2px solid black;
   border-bottom: 2px solid black;
   text-align: center;
   font-weight: bold;
   font-size: 1.2em;
-  width: 15%;
-  height: 20%;
   padding: 0.5%;
   position: relative;
   float: right;
-  margin-bottom: 5%;
+  margin-bottom: 2%;
 }
-
 .title1 {
-    background-color: rgb(206, 145, 155);
+  background-color: rgb(206, 145, 155);
 }
-
 .title2 {
-    background-color: rgb(255, 0, 0);
-    color: white;
+  background-color: rgb(255, 0, 0);
+  color: white;
 }
-
 .title3 {
-    background-color: rgb(189, 156, 94);
+  background-color: rgb(189, 156, 94);
+}
+.column1,
+.column2,
+.column3 {
+  background-color: rgb(139, 138, 138);
+  border: 3px solid rgb(0, 0, 0);
+}
+.description1,
+.description2,
+.description3 {
+  font-size: 18px;
 }
 
-.column1, .column2, .column3 {
-   background-color: rgb(139, 138, 138); 
-   border: 3px solid rgb(0, 0, 0);
-}
-
-.description {
-    margin: 8% 5% 5% 5%;
-    font-size: 18px;
-}
-
-@media (min-width: 992px) {
-  .column1 {
-    width: 30%;
-    float: left;
-    margin: 0 2% 0 0;
-  }
-  .column2 {
-    width: 30%;
-    float: left;
-    margin: 0 2% 0 0;
-  }
-  .column3 {
-    width: 30%;
-    float: left;
-    margin: 0 2% 0 0;
-  }
-}
-
+/* medium screen -- tablet */
 @media (min-width: 768px) and (max-width: 991px) {
 }
 .column1 {
-    width: 50%;
+  width: 45%;
+  float: left;
+  margin: 0 2% 0 0;
 }
 .column2 {
-    width: 50%;
+  width: 45%;
+  float: left;
+  margin: 0 2% 0 0;
 }
 .column3 {
-    width: 100%;
+  width: 93%;
+  float: left;
+  margin: 2% 0 0 0;
+}
+.title1 {
+  width: 30%;
+}
+.title2 {
+  width: 30%;
+}
+.title3 {
+  width: 15%;
+}
+.description1,
+.description2 {
+  margin: 10% 4% 0 4%;
+}
+.description3 {
+  margin: 7% 2% 0 2%;
 }
 
-@media (min-width: 767px) and (max-width: 767px) {
-}
+/* small screen -- mobile or tablet */
+@media (max-width: 767px) {
+    .column1 {
+      width: 94%;
+      float: left;
+      margin: 0 0 2% 0;
+    }
+    .column2 {
+      width: 94%;
+      float: left;
+    }
+    .column3 {
+      width: 94%;
+      float: left;
+    }
+    .title3 {
+      width: 30%;
+    }
+    .description {
+      margin: 10% 1% 0 1%;
+    }
+    .description {
+      margin: 10% 1% 0 1%;
+    }
+    .description {
+      margin: 10% 1% 0 1%;
+    }
+  }
+
+/* large screen -- desktop */
+@media (min-width: 992px) {
+    .column1 {
+      width: 30%;
+      float: left;
+      margin: 0 2% 0 0;
+    }
+    .column2 {
+      width: 30%;
+      float: left;
+      margin: 0 2% 0 0;
+    }
+    .column3 {
+      width: 30%;
+      float: left;
+      margin: 0 2% 0 0;
+    }
+    .description1,
+    .description2,
+    .description3 {
+      margin: 12% 5% 5% 5%;
+    }
+    .title1,
+    .title2,
+    .title3 {
+      width: 25%;
+      height: 20%;
+    }
+  }
